--- a/FlashLoans/package.json
+++ b/FlashLoans/package.json
@@ -2,6 +2,9 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
     "hardhat": "^2.10.1"
   },
   "dependencies": {
